# VioletPS

./: .gitignore  CMakeLists.txt  README.md
src/: CoderLayer.cpp  EditorConfigurationsLayer.cpp  FPSCounter.cpp  HidePauseLayer.cpp  HitboxLayer.cpp  NoclipOptionsLayer.cpp  SpeedhackOptionsLayer.cpp  VCustomEncrypt.cpp  epic.cpp  include.h
